--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,16 +34,22 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.google.android.gms:play-services-maps:9.0.0'
+    compile 'com.google.android.gms:play-services-maps:9.0.2'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.google.firebase:firebase-database:9.0.0'
+    /*compile 'com.google.firebase:firebase-database:9.0.0'*/
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
-    compile 'com.google.firebase:firebase-auth:9.0.0'
+    /*compile 'com.google.firebase:firebase-auth:9.0.0'*/
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     compile 'com.viewpagerindicator:library:2.4.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.firebase:firebase-storage:9.0.2'
+    compile 'com.google.firebase:firebase-crash:9.0.2'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'com.google.android.gms:play-services-appindexing:9.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
